--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-tabs": "^2.2.2",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
